230604_1731 index css 작성중

--- a/main/index.html
+++ b/main/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <div>
@@ -36,22 +38,24 @@
                         <div class="category" value="schedule">일정</div>
                         <div class="category" value="review">다녀와서</div>
                     </nav>
-                    <div>영상파트65퍼 인라인블록
-                        <div id="introVideo"></div>
-                        <div id="introSchedule"></div>
-                    </div>
-                    <div>카테고리요약파트35퍼 인라인블록
-                        <div id="introMember">
-                            <h3>멤버</h3>
-                            <div>요약내용</div>
+                    <div id="content">
+                        <div>영상파트65퍼 인라인블록
+                            <div id="introVideo"></div>
+                            <div id="introSchedule"></div>
                         </div>
-                        <div id="introPlan">
-                            <h3>계획</h3>
-                            <div>요약내용</div>
-                        </div>
-                        <div id="introReview">
-                            <h3>다녀와서</h3>
-                            <div>요약내용</div>
+                        <div>카테고리요약파트35퍼 인라인블록
+                            <div id="introMember">
+                                <h3>멤버</h3>
+                                <div>요약내용</div>
+                            </div>
+                            <div id="introPlan">
+                                <h3>계획</h3>
+                                <div>요약내용</div>
+                            </div>
+                            <div id="introReview">
+                                <h3>다녀와서</h3>
+                                <div>요약내용</div>
+                            </div>
                         </div>
                     </div>
                 </div>
