230613_2145 main 디자인 및 css 추가

--- a/main/index.html
+++ b/main/index.html
@@ -13,47 +13,47 @@
         <article id="outOfContentArea">
             <section>
                 <picture>
-                    <source media="(min-width:650px)" srcset="images/img_jpg">
-                    <img src="images/img_jpg" alt="name">
+                    <source media="(min-width:650px)" srcset="images/icon-exam.png">
+                    <img src="images/icon-exam.png" alt="name" value="icon-darkmode">
                 </picture>
                 <picture>
-                    <source media="(min-width:650px)" srcset="images/img_jpg">
-                    <img src="images/img_jpg" alt="name">
+                    <source media="(min-width:650px)" srcset="images/icon-exam.png">
+                    <img src="images/icon-exam.png" alt="name" value="icon-ask">
                 </picture>
                 <picture>
-                    <source media="(min-width:650px)" srcset="images/img_jpg">
-                    <img src="images/img_jpg" alt="name">
+                    <source media="(min-width:650px)" srcset="images/icon-exam.png">
+                    <img src="images/icon-exam.png" alt="name" value="icon-logout">
                 </picture>
             </section>
         </article>
         <article id="contentsArea">
             <section>
-                <div id="memberPart">
-                    <h1>SM(B)</h1>
+                <div id="userPart">
+                    <div class="user-title font30">SM(B)</div>
                 </div>
                 <div id="contentPart">
                     <nav>
-                        <div class="category" value="member">멤버</div>
-                        <div class="category" value="plan">계획</div>
-                        <div class="category" value="schedule">일정</div>
-                        <div class="category" value="review">다녀와서</div>
+                        <div class="category box-shadow font30" value="member">멤버</div>
+                        <div class="category box-shadow font30" value="plan">계획</div>
+                        <div class="category box-shadow font30" value="schedule">일정</div>
+                        <div class="category box-shadow font30" value="review">다녀와서</div>
                     </nav>
                     <div id="content">
-                        <div>영상파트65퍼 인라인블록
-                            <div id="introVideo"></div>
-                            <div id="introSchedule"></div>
+                        <div>
+                            <div id="introVideo">1</div>
+                            <div id="introSchedule">2</div>
                         </div>
-                        <div>카테고리요약파트35퍼 인라인블록
-                            <div id="introMember">
-                                <h3>멤버</h3>
+                        <div>
+                            <div class="box-shadow" id="introMember">
+                                <h3 class="font30">멤버</h3>
                                 <div>요약내용</div>
                             </div>
-                            <div id="introPlan">
-                                <h3>계획</h3>
+                            <div class="box-shadow" id="introPlan">
+                                <h3 class="font30">계획</h3>
                                 <div>요약내용</div>
                             </div>
-                            <div id="introReview">
-                                <h3>다녀와서</h3>
+                            <div class="box-shadow" id="introReview">
+                                <h3 class="font30">다녀와서</h3>
                                 <div>요약내용</div>
                             </div>
                         </div>
