--- a/main/index.html
+++ b/main/index.html
@@ -33,10 +33,10 @@
                 </div>
                 <div id="contentPart">
                     <nav>
-                        <div class="category box-shadow font30" value="member">멤버</div>
-                        <div class="category box-shadow font30" value="plan">계획</div>
-                        <div class="category box-shadow font30" value="schedule">일정</div>
-                        <div class="category box-shadow font30" value="review">다녀와서</div>
+                        <div class="category box-shadow font30" value="member" onclick="goMemberHTML();">멤버</div>
+                        <div class="category box-shadow font30" value="plan" onclick="goPlanHTML();">계획</div>
+                        <div class="category box-shadow font30" value="schedule" onclick="goScheduleHTML();">일정</div>
+                        <div class="category box-shadow font30" value="review" onclick="goReviewHTML();">다녀와서</div>
                     </nav>
                     <div id="content">
                         <div>
@@ -62,5 +62,6 @@
             </section>
         </article>
     </div>
+    <script src="js/common.js"></script>
 </body>
 </html>
