230704_2100 메모별 개별 삭제 버튼 js 완료
1.체크박스 클릭으로 개별 및 다중 삭제 작업하려고 했음
2. 생성된 li에 대해서 js가 작동을 안함
3. html에 미리 세팅해두고 세팅된 li에 대해서 삭제js 짰음
4. 삭제자체를 모듈화 시키고 시간이 남으면 체크박스 다중삭제도 해보기

--- a/main/review.html
+++ b/main/review.html
@@ -41,10 +41,12 @@
                     </nav>
                     <div id="content">
                         <button id="makeNewMemo">새 메모 생성</button>
-                        <button id="deleteMemo">메모 삭제</button>
                         <div id="memoForm">
                             <ul class="memoDate">
-                                <li><input type="checkbox" class="checkbox"></li>
+                                <li><input type="checkbox" class="checkbox"> <input type="text"><button class="saveMemo">저장</button><button class="deleteMemo">삭제</button></li>
+                                <li><input type="checkbox" class="checkbox"> <input type="text"><button class="saveMemo">저장</button><button class="deleteMemo">삭제</button></li>
+                                <li><input type="checkbox" class="checkbox"> <input type="text"><button class="saveMemo">저장</button><button class="deleteMemo">삭제</button></li>
+                                <li><input type="checkbox" class="checkbox"> <input type="text"><button class="saveMemo">저장</button><button class="deleteMemo">삭제</button></li>
                             </ul>
                         </div>
                     </div>
